[gd_scene load_steps=3 format=3 uid="uid://dm1u8um67wq1f"]

[ext_resource type="Script" path="res://globals/pause_manager.gd" id="1_hffhf"]
[ext_resource type="PackedScene" uid="uid://do5nqb0fv8tly" path="res://prefabs/ui/volume_controls.tscn" id="2_q4rni"]

[node name="PauseManager" type="Node"]
process_mode = 3
script = ExtResource("1_hffhf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="PauseScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.611765)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PauseScreen/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PauseScreen/Background/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseScreen/Background/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PauseScreen/Background/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Game Paused"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/PauseScreen/Background/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Press (esc/start) to continue"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="CanvasLayer/PauseScreen/Background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -90.0
offset_right = 211.0
offset_bottom = -40.0
grow_vertical = 0
text = "Main Menu"

[node name="VolumeControls" parent="CanvasLayer/PauseScreen/Background" instance=ExtResource("2_q4rni")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -344.0
offset_top = -90.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="CanvasLayer/PauseScreen/Background/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
